Fix border-radius masks for composited descendants

We were failing to use a border-radius mask layer for
cases where a descendant of a composited layer needs
clipping but the layer itself does not. This change
forces the mask layer whenever there is a composited
descendant. That will cause more masks than we strictly
need, but we have no efficient way to detect that the
mask is unnecessary.

R=trchen@chromium.org
BUG=756265

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3aaccf95b17d8c3266d12c291b27ed6cf2af4ab2