third_party/WebKit/Source/core/paint/compositing/CompositedLayerMappingTest.cpp
@@ -1897,6 +1897,43 @@ TEST_P(CompositedLayerMappingTest, AncestorClipMaskRequiredDueToRotation) {
   EXPECT_TRUE(child_mapping->AncestorClippingMaskLayer());
 }
 
+TEST_P(CompositedLayerMappingTest,
+       AncestorClipMaskRequiredByBorderRadiusWithCompositedDescendant) {
+  // This case has the child and grandchild within the ancestors and would
+  // in principle not need a mask, but does because we cannot efficiently
+  // check the bounds of the composited descendant for intersection with the
+  // border.
+  SetBodyInnerHTML(
+      "<style>"
+      "  #grandparent {"
+      "    width: 200px; height: 200px; overflow: hidden; border-radius: 25px;"
+      "  }"
+      "  #parent { position: relative; left: 30px; top: 30px; width: 140px;"
+      "           height: 140px; overflow: hidden; will-change: transform;"
+      "  }"
+      "  #child { position: relative; left: 10px; top: 10px; width: 120px;"
+      "           height: 120px; will-change: transform;"
+      "  }"
+      "</style>"
+      "<div id='grandparent'>"
+      "  <div id='parent'>"
+      "    <div id='child'></div>"
+      "</div>");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  Element* parent = GetDocument().getElementById("parent");
+  ASSERT_TRUE(parent);
+  PaintLayer* parent_paint_layer =
+      ToLayoutBoxModelObject(parent->GetLayoutObject())->Layer();
+  ASSERT_TRUE(parent_paint_layer);
+  CompositedLayerMapping* parent_mapping =
+      parent_paint_layer->GetCompositedLayerMapping();
+  ASSERT_TRUE(parent_mapping);
+  EXPECT_TRUE(parent_mapping->AncestorClippingLayer());
+  EXPECT_TRUE(parent_mapping->AncestorClippingLayer()->MaskLayer());
+  EXPECT_TRUE(parent_mapping->AncestorClippingMaskLayer());
+}
+
 TEST_P(CompositedLayerMappingTest, StickyPositionMainThreadOffset) {
   SetBodyInnerHTML(
       "<style>.composited { backface-visibility: hidden; }"
